# icde-ldpfraud-artifact-20260609

./: .gitignore  ICDE_LDP_Budget_Integrity_Round4_Revised.tex  Makefile  PACKAGE_MANIFEST.txt  README.md  artifact_index.html
experiments/aws_nitro/: Cargo.toml  Dockerfile  README.md  enclave_oracle.py  parent_host.py  scaled_runner.py
experiments/aws_nitro/results/icde-ldp-nitro-20260605094208/: eif.sha256  eif_build.txt  enclave_describe.json  experiment_status.json  hardware_attestation_summary.json  local_smoke.csv  nitro_measurements.csv  result_manifest.sha256  run_enclave.json  terminate_enclave.txt
experiments/aws_nitro/results/icde-ldp-nitro-20260605094208/attestation_docs/: report_000000.attestation.cose  report_000000.response.json  report_000001.attestation.cose  report_000001.response.json  report_000002.attestation.cose  report_000002.response.json  report_000003.attestation.cose  report_000003.response.json  report_000004.attestation.cose  report_000004.response.json  report_000005.attestation.cose  report_000005.response.json  report_000006.attestation.cose  report_000006.response.json  report_000007.attestation.cose  report_000007.response.json  (+84 more)
experiments/aws_nitro/results/icde-ldp-nitro-scale-20260606040525/: eif.sha256  eif_build.txt  enclave_describe.json  pcr_values.txt  phase_correctness_10k_pow15.summary.json  phase_direct_1m_k0.summary.json  phase_hybrid_500k_pow14.summary.json  phase_teeonly_1m_k0.summary.json  phase_teepow_250k_pow15.summary.json  run_enclave.json  scale_manifest.json
experiments/aws_nitro/src/: get_attestation_doc.rs
(+73 files in other folders)
